force-app/main/default/objects/Aircall_Forwarding_Rule__c/Aircall_Forwarding_Rule__c.object-meta.xml
<CustomObject>
    <label>Aircall Forwarding Rule</label>
    <nameField>
        <label>Aircall Forwarding Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircall Forwarding Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>