force-app/main/default/objects/Aircall_Forwarding_Rule__c/fields/After_Hours__c.field-meta.xml
<CustomField>
    <fullName>After_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Hours</label>
    <type>Checkbox</type>
</CustomField>