force-app/main/default/objects/Aircall_Forwarding_Rule__c/fields/Transfer_From_NumberId__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_NumberId__c</fullName>
    <label>Transfer From NumberId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>