force-app/main/default/objects/Aircall_Forwarding_Rule__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <label>Transfer To</label>
    <type>Phone</type>
</CustomField>