force-app/main/default/objects/Aircall_Forwarding_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transfer_From_NumberId__c</columns>
    <columns>Transfer_To__c</columns>
    <columns>After_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>